completed dockerization